@@ -5,9 +5,12 @@ lib/Acme/MetaSyntactic/charlies_angels.pm
 lib/Acme/MetaSyntactic/cluedo.pm
 lib/Acme/MetaSyntactic/compass.pm
 lib/Acme/MetaSyntactic/evangelist.pm
+lib/Acme/MetaSyntactic/famous_five.pm
 lib/Acme/MetaSyntactic/jelly_belly.pm
 lib/Acme/MetaSyntactic/michelin.pm
 lib/Acme/MetaSyntactic/nehi.pm
+lib/Acme/MetaSyntactic/noughts_and_crosses.pm
+lib/Acme/MetaSyntactic/shou_dou_qi.pm
 lib/Acme/MetaSyntactic/sodor.pm
 Makefile.PL
 MANIFEST
@@ -17,6 +20,7 @@ t/950_pod.t
 t/960_pod_coverage.t
 t/980_versions.t
 t/982_git.t
+t/984_pod.t
 Changes
 README
 META.yml                                 Module YAML meta-data (added by MakeMaker)
