@@ -1,3 +1,6 @@
+Version 2012060102 Fri Jun  1 21:10:42 CEST 2012
++ New themes: noughts_and_crosses, shou_dou_qi, famous_five
+
 Version 2012060101 Fri Jun  1 02:34:11 CEST 2012
 + New theme: cluedo
 
